--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-app.svg" />
-    <link rel="icon" type="image/svg+xml" sizes="192x192" href="/icons/icon-192.svg" />
-    <link rel="icon" type="image/svg+xml" sizes="512x512" href="/icons/icon-512.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Brikio - Smart construction estimates. Calculate materials, quantities and costs instantly. Try free without signup." />
     <meta name="keywords" content="construction estimates, building budget, material calculator, construction software, contractor tools" />
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Brikio - Smart Construction Estimates" />
     <meta name="twitter:description" content="Calculate materials, quantities and costs in minutes" />
     
-    <link rel="apple-touch-icon" href="/favicon-app.svg" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
